feat: 비동기 기반 매치 수집 + 모델 학습 루프 통합

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .env
-.match_data.csv
-.user_list.csv
-.catboost_model.cbm
-.train_log.txt
+catboost_model.cbm
+train_log.txt
+match_data.csv
+user_list.csv
